# starts-ends-with-caseless

./: .travis.yml  Cargo.toml  README.md
src/: ends_with_caseless.rs  ends_with_caseless_multiple.rs  lib.rs  starts_with_caseless.rs  starts_with_caseless_multiple.rs
tests/: ends_with_caseless.rs  ends_with_caseless_mutiple.rs  starts_with_caseless.rs  starts_with_caseless_mutiple.rs
